--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ body{
     background-size: cover;
     color:#333;
     scroll-behavior:smooth;
-    padding-bottom:120px;
+    padding-bottom:250px;
 }
 
 /* floating language switch */
@@ -76,7 +76,9 @@ body{
     justify-content:center;
     gap:30px;
     flex-wrap:wrap;
-    margin-bottom:50px;
+    margin-bottom:10px;
+    margin-top:160px;
+
 }
 .profile img{
     width:280px; 
